Updated config.toml and READme.md

--- a/public/events/index.html
+++ b/public/events/index.html
@@ -171,7 +171,7 @@
         <div class="col-12">
           <div class="section-title">
             <h2>OUR EVENTS</h2>
-            <p>We have multiple events scheduled throughout the year!</p>
+            <p>We&#39;ll have multiple events scheduled throughout the year!</p>
           </div>
         </div>
       </div>
