Added GSC to head.html

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <title>THS Habitat For Humanity</title>
 
   
-
+  <meta name="google-site-verification" content="6f_Uy2LQXxbNlBE9jEwrb_ZO5_gwNe2QFnsGA--QQBM" />
   
   <!-- mobile responsive meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1" />
