--- a/public/events/index.html
+++ b/public/events/index.html
@@ -179,7 +179,7 @@
         <div class="col-12">
           <h3>Calendar</h3>
         </div>
-        <div class="col-6 card" style="border-radius: 25px;">
+        <div class="col-md-12 col-lg-6 col-sm-12 card" style="border-radius: 25px;">
           <div class="card-body">
             <h4 class="card-title">School Year Event List</h4>
             <p class="card-subtitle">Our past, present, and future events this school year!</p>
@@ -194,7 +194,7 @@
             </ul>
           </div>
         </div>
-        <div class="col-6">
+        <div class="site-project-calendar col-md-12 col-lg-6 col-sm-12">
           <div id="calendar-small"></div>
         </div>
       </div>
@@ -211,7 +211,7 @@
         <div class="site-project-partial-scroll ">
           
           
-          <div class="site-project-partial-scroll-custom col-4 card mt-3 ">
+          <div class="site-project-partial-scroll-custom col-lg-4 col-md-6 col-sm-12 card mt-3 ">
             <div class="card-deck">
               <img src="https://Habitat-For-Humanity-THS.github.io/images/events/BTC.png" class="card-img" alt="2022 - 2023 School Year Begins image">
               <div class="card-body">
